--- a/.config
+++ b/.config
@@ -2733,7 +2733,7 @@ CONFIG_DM_BUFIO=m
 # CONFIG_DM_DEBUG_BLOCK_MANAGER_LOCKING is not set
 CONFIG_DM_UNSTRIPED=m
 CONFIG_DM_CRYPT=m
-# CONFIG_DM_SNAPSHOT is not set
+CONFIG_DM_SNAPSHOT=m
 # CONFIG_DM_THIN_PROVISIONING is not set
 # CONFIG_DM_CACHE is not set
 CONFIG_DM_WRITECACHE=m
