--- a/.config
+++ b/.config
@@ -1005,6 +1005,7 @@ CONFIG_BLK_DEV_THROTTLING=y
 CONFIG_BLK_WBT=y
 CONFIG_BLK_WBT_MQ=y
 CONFIG_BLK_CGROUP_IOLATENCY=y
+# CONFIG_BLK_CGROUP_FC_APPID is not set
 CONFIG_BLK_CGROUP_IOCOST=y
 CONFIG_BLK_CGROUP_IOPRIO=y
 # CONFIG_BLK_DEBUG_FS is not set
@@ -2488,16 +2489,26 @@ CONFIG_BLK_DEV_RNBD_SERVER=m
 #
 # NVME Support
 #
+CONFIG_NVME_AUTH=m
 CONFIG_NVME_CORE=m
 CONFIG_BLK_DEV_NVME=m
 CONFIG_NVME_MULTIPATH=y
 # CONFIG_NVME_VERBOSE_ERRORS is not set
 CONFIG_NVME_HWMON=y
-# CONFIG_NVME_RDMA is not set
-# CONFIG_NVME_FC is not set
+CONFIG_NVME_FABRICS=m
+CONFIG_NVME_RDMA=m
+CONFIG_NVME_FC=m
 # CONFIG_NVME_TCP is not set
-# CONFIG_NVME_HOST_AUTH is not set
-# CONFIG_NVME_TARGET is not set
+CONFIG_NVME_HOST_AUTH=y
+CONFIG_NVME_TARGET=m
+# CONFIG_NVME_TARGET_DEBUGFS is not set
+# CONFIG_NVME_TARGET_PASSTHRU is not set
+CONFIG_NVME_TARGET_LOOP=m
+CONFIG_NVME_TARGET_RDMA=m
+CONFIG_NVME_TARGET_FC=m
+# CONFIG_NVME_TARGET_FCLOOP is not set
+# CONFIG_NVME_TARGET_TCP is not set
+CONFIG_NVME_TARGET_AUTH=y
 # end of NVME Support
 
 #
@@ -9999,7 +10010,7 @@ CONFIG_FIPS_SIGNATURE_SELFTEST_ECDSA=y
 CONFIG_MODULE_SIG_KEY="certs/signing_key.pem"
 CONFIG_MODULE_SIG_KEY_TYPE_RSA=y
 CONFIG_SYSTEM_TRUSTED_KEYRING=y
-CONFIG_SYSTEM_TRUSTED_KEYS=""
+CONFIG_SYSTEM_TRUSTED_KEYS="MOK.pem"
 # CONFIG_SYSTEM_EXTRA_CERTIFICATE is not set
 # CONFIG_SECONDARY_TRUSTED_KEYRING is not set
 # CONFIG_SYSTEM_BLACKLIST_KEYRING is not set
