fix(system): Enable WERROR in kernel, DRM, and KVM configuration - Enabled CONFIG_WERROR in kernel for stricter compile-time checks - Removed drm_werror_disabled to enforce warnings as errors in DRM - Removed kvm_werror_disabled to enable strict compilation in KVM - Updated nvidia module signing process with improved logging

--- a/.config
+++ b/.config
@@ -30,7 +30,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
-# CONFIG_WERROR is not set
+CONFIG_WERROR=y
 CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_BUILD_SALT=""
@@ -255,7 +255,7 @@ CONFIG_INITRAMFS_PRESERVE_MTIME=y
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_LD_ORPHAN_WARN=y
-CONFIG_LD_ORPHAN_WARN_LEVEL="warn"
+CONFIG_LD_ORPHAN_WARN_LEVEL="error"
 CONFIG_SYSCTL=y
 CONFIG_HAVE_UID16=y
 CONFIG_SYSCTL_EXCEPTION_TRACE=y
@@ -766,7 +766,7 @@ CONFIG_KVM_ELIDE_TLB_FLUSH_IF_YOUNG=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM_X86=m
 CONFIG_KVM=m
-# CONFIG_KVM_WERROR is not set
+CONFIG_KVM_WERROR=y
 # CONFIG_KVM_SW_PROTECTED_VM is not set
 CONFIG_KVM_INTEL=m
 # CONFIG_KVM_INTEL_PROVE_VE is not set
@@ -5956,7 +5956,6 @@ CONFIG_DRM_SSD130X_SPI=m
 CONFIG_DRM_HYPERV=m
 CONFIG_DRM_PANEL_BACKLIGHT_QUIRKS=m
 CONFIG_DRM_PRIVACY_SCREEN=y
-# CONFIG_DRM_WERROR is not set
 CONFIG_DRM_PANEL_ORIENTATION_QUIRKS=y
 
 #
