--- a/scopesorted.toml
+++ b/scopesorted.toml
@@ -101,3 +101,4 @@ topo_order_commits = true
 sort_commits = "oldest"
 # Process submodules commits
 recurse_submodules = false
+tag_pattern = "[0-9]+\\.[0-9]+\\.[0-9]+"
