--- a/scopesorted.toml
+++ b/scopesorted.toml
@@ -50,7 +50,7 @@ postprocessors = [
 # See https://www.conventionalcommits.org
 conventional_commits = true
 # Exclude commits that do not match the conventional commits specification.
-filter_unconventional = true
+filter_unconventional = false
 # Require all commits to be conventional.
 # Takes precedence over filter_unconventional.
 require_conventional = false
@@ -101,4 +101,7 @@ topo_order_commits = true
 sort_commits = "oldest"
 # Process submodules commits
 recurse_submodules = false
-tag_pattern = "[0-9]+\\.[0-9]+\\.[0-9]+"
+tag_pattern = '[0-9]{1,4}\.[0-9]{1,2}\.[0-9]{1,3}'
+#tag_pattern = '[0-9]{4}\.[0-9]{2}\.[0-9]+'
+ignore_tags = "v.*"
+#initial_tag = "2024.03.0"
